[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nisarhdf"
version = "0.0.3"
description = "Tools for NISAR GPS cal/val data"
authors = [
    { name = "Ian Joughin", email = "irj@uw.edu" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["SAR", "NISAR"]
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "pyproj",
    "geopandas",
    "rasterio",
    "matplotlib",
    "s3fs",
    "geojson",
    "rioxarray",
    "gdal"
]

[tool.setuptools]
packages = ["nisarhdf"]

[project.urls]
Homepage = "https://github.com/fastice/nisarhdf"
Repository = "https://github.com/fastice/nisarhdf"

[project.scripts]
nisarh5toimage = "nisarhdf.nisarH5ToImage:run"
